fixed sticky cart visibility updated fonts

--- a/public/style.css
+++ b/public/style.css
@@ -411,14 +411,15 @@ ul {
 /* ====================== Cart ======================== */
 
 .content-section {
-  margin: 1em;
+  /* margin: 1em; */
   position: relative;
   z-index: 1;
 }
 
 .cart {
-  max-width: 900px;
-  margin: 0 auto;
+  /* max-width: 900px; */
+  margin: 4vh auto 0 auto;
+  width: 100vw;
   padding: 0 1.5em;
   background-color: rgba(211, 211, 211, 1);
   border-radius: 5px;
@@ -657,7 +658,7 @@ ul {
 }
 
 /* for larger than 800px */
-@media only screen and (min-width: 800px) and (min-height: 700px) {
+@media only screen and (min-width: 800px){
   #form {
     margin: 140px auto;
     padding: 36px;
@@ -689,6 +690,11 @@ ul {
   .message h2{
     font-size: 24px;
 }
+
+.cart{
+  width: 800px;
+}
+
 }
 
 @media all and (max-aspect-ratio: 1110/740) {
@@ -711,6 +717,7 @@ ul {
     left: 30px;
     right: auto;
   }
+  
 }
 
 /* @media all and (orientation: landscape){
